# rust-backend-portfolio

./: Cargo.toml  README.MD
src/: app.rs  error.rs  main.rs
src/auth/: jwt.rs
src/config/: env.rs
src/database/: mod.rs  mongodb.rs
src/handlers/: auth_handlers.rs  mod.rs  project_handlers.rs
src/middleware/: auth_middleware.rs  logger.rs  mod.rs
src/models/: mod.rs  projects.rs  user_models.rs
src/repositories/: mod.rs  project_repo.rs
src/routes/: auth_routes.rs  mod.rs  project_routes.rs
