[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.43"
dotenvy = "0.15.7"
mongodb = "3.5.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors","trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
