[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bcrypt = "0.18.0"
chrono = {version="0.4.43" , features = ["serde"]}
dotenvy = "0.15.7"
futures = "0.3.31"
jsonwebtoken = { version = "10.3", default-features = false, features = ["rust_crypto"] }
mongodb = "3.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors","trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
